# WhisperLive

./: .gitignore  README.md  pyproject.toml
data/sample-outputs/: 001 Al-Fatihah.srt
