[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "whisper-live"
dynamic = ["version"]
description = "A nearly-live implementation of OpenAI's Whisper ~ Qadr.AI Edition ðŸ•¶ï¸"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "PyAudio",
    "faster-whisper==1.1.0",
    "torch",
    "torchaudio", 
    "websockets",
    "onnxruntime==1.17.0",
    "scipy",
    "websocket-client",
    "numba",
    "openai-whisper==20240930",
    "kaldialign",
    "soundfile",
    "tokenizers==0.20.3",
    "librosa",
    "numpy==1.26.4",
    "openvino",
    "openvino-genai",
    "openvino-tokenizers",
    "optimum",
    "optimum-intel",
]

# This section is for versioning
# It allows versions to be read from a specific file specified by "path"
# Note: This requires you make `dynamic = ["version"]` in [project] section above
[tool.hatch.version]
path = "whisper_live/__version__.py"
pattern = "__version__ = ['\"](?P<version>[^'\"]*)['\"]"

[tool.uv]
dev-dependencies = []